# evm-signer-kms

./: .dockerignore  .envrc.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  dprint.json  rust-toolchain.toml  rustfmt.toml
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/commands/: post-create.sh  post-start.sh
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: build-and-test.yml
examples/: tx-type-0-example.rs  tx-type-1-example.rs  tx-type-2-example.rs
src/: evm_account.rs  lib.rs  types.rs
src/account/: eip2.rs  mod.rs
src/evm_account/: eip2.rs  kms_key.rs  transaction.rs
src/evm_account/transaction/: access_list.rs  access_list_transaction.rs  free_market_transaction.rs  legacy_transaction.rs
src/key/: aws_kms.rs  kms_key.rs  mod.rs
src/transaction/: access_list.rs  access_list_transaction.rs  address.rs  free_market_transaction.rs  legacy_transaction.rs  mod.rs
tests/: access_list_transaction_test.rs  account_test.rs  aws_kms_key_test.rs  evm_account_test.rs  free_market_transaction_test.rs  kms_key_test.rs  legacy_transaction_test.rs
tests/data/: 52c9a19f-bcfd-46a7-bd56-6d0cf98d8616.pem  invalid-access-list-tx-01.json  invalid-access-list-tx-02.json  invalid-access-list-tx-03.json  invalid-access-list-tx-04.json  invalid-free-market-tx-01.json  invalid-free-market-tx-02.json  invalid-free-market-tx-03.json  invalid-free-market-tx-04.json  invalid-legacy-tx-01.json  invalid-legacy-tx-02.json  invalid-legacy-tx-03.json  invalid-tx-02.json  invalid-tx-03.json  pub-key.der  pub-key.pem  valid-access-list-tx-01.json  valid-access-list-tx-02.json  valid-access-list-tx-03.json  valid-free-market-tx-01.json  valid-free-market-tx-02.json  valid-free-market-tx-03.json  valid-free-market-tx-04.json  valid-free-market-tx-05.json  valid-legacy-tx-01.json  valid-legacy-tx-02.json  valid-tx-01.json
tests/data/scripts/: pem2der.sh
