[package]
name = "evm-signer-kms"
version = "0.4.3"
authors = ["Lukasz Orlowski <lukasz@orlowski.io>"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/evm-signer-kms"
edition = "2024"
exclude = [
  ".gitignore",
  ".git",
  ".github",
  ".devcontainer",
]
homepage = "https://github.com/orlowskilp/evm-signer-kms"
keywords = ["ethereum", "evm", "signer", "kms", "aws", "secp256k1", "ethnum"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/orlowskilp/evm-signer-kms"
description = "EVM signer using keys from AWS KMS"

[dependencies]
asn1 = "0.20.0"
aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.57.0"
ethnum = "1.5.0"
hex = { version = "0.4.3", features = ["serde"] }
rlp = "0.6.1"
secp256k1 = { version = "0.30.0", features = ["recovery"] }
serde = { version = "1.0.217", features = ["derive"] }
sha3 = "0.10.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
lazy_static = "1.5.0"
serde_json = "1.0.138"
serde_plain = "1.0.2"
tokio-test = "0.4.4"
tracing-test = "0.2.5"
