[package]
name = "evm-signer-kms"
version = "0.5.1"
authors = ["Lukasz Orlowski <lukasz@orlowski.io>"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/evm-signer-kms"
edition = "2024"
exclude = [
  ".gitignore",
  ".gitattributes",
  ".git",
  ".github",
  ".devcontainer",
  "codecov.yml",
]
homepage = "https://github.com/orlowskilp/evm-signer-kms"
keywords = ["ethereum", "evm", "signer", "kms", "secp256k1"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/orlowskilp/evm-signer-kms"
description = "EVM signer using keys from AWS KMS"

[[example]]
name = "tx-type-2"
path = "examples/tx-type-2-example.rs"

[[example]]
name = "tx-type-1"
path = "examples/tx-type-1-example.rs"

[[example]]
name = "tx-type-0"
path = "examples/tx-type-0-example.rs"

[features]
sts-assume-role = [
  "dep:aws-sdk-sts",
]

[dependencies]
anyhow = "1.0.100"
asn1 = "0.23.0"
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.97.0"
aws-sdk-sts = { version = "1.95.0", optional = true }
ethnum = "1.5.2"
hex = { version = "0.4.3", features = ["serde"] }
rlp = "0.6.1"
secp256k1 = { version = "0.31.1", features = ["recovery"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_plain = "1.0.2"
sha3 = "0.10.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
lazy_static = "1.5.0"
serial_test = "3.3.1"
test-log = "0.2.19"
tokio-test = "0.4.5"
